# testing

./: .conform.yaml  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY-DEPENDENCY.md  SECURITY-INSIGHTS.yml  SECURITY-SELF-ASSESSMENT.md  SECURITY.md  SUPPORT.md  mkdocs.yml  osv-scanner.toml  pdm.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  label-path.yml  label-title.yml  renovate.json
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: adopters.yml  bug_report.yml  config.yml  feature_request.yml
.github/actions/decode/: action.yml
.github/actions/git-setup/: action.yml
.github/actions/hash/: action.yml
.github/actions/pdm-setup/: action.yml
.github/actions/pull-request/: action.yml
.github/actions/sarif-upload/: action.yml
.github/actions/sbom-upload/: action.yml
.github/actions/template-setup/: action.yml
.github/reusability/: globalize.sh  localize.sh
.github/rulesets/: branch-all-everyone.json  branch-all-human.json  branch-bot-human.json  branch-default-everyone.json  branch-default-human.json  tags-all-everyone.json  tags-all-everyone.json.license
.github/tools/: find-cog-files.sh  update-actions-names.sh
.github/workflows/: README.md  actions.yml  attest-package-reusable.yml  attest-sbom-reusable.yml  cache-item-reusable.yml  cache-reusable.yml  cache.yml  citation-renovate.yml  citation-reusable.yml  citation.yml  commit.yml  coverage-reusable.yml  docs-renovate.yml  docs-reusable.yml  docs.yml  editorconfig.yml  generation-update.yml  generation.yml  github-actions.yml  harden.yml  ini-renovate.yml  ini-reusable.yml  ini.yml  labeler.yml  legal.yml  markdown-renovate.yml  markdown-reusable.yml  markdown.yml  pdm-reusable.yml  policy.yml  pre-commit-update.yml  pre-commit.yml  prose.yml  pull-request.yml  pyproject.yml  python-renovate.yml  python-reusable.yml  python.yml  release.yml  renovate-validator.yml  (+23 more)
docs/: __init__.py  github_settings.md  legal.md  other_languages.md  scheduled_jobs.md  security.md
docs/how_tos/: .pages  README.md
docs/release/: checklist.md
docs/template/: comparison.md  configuration.md  documentation.md  faq.md  github-actions.md  philosophy.md  prose.md  python.md  tests.md  tips_and_tricks.md
docs/template/quickstart/: installation.md  usage.md
docs/template/release/: process.md
skeleton/: .editorconfig  .vale.ini  ADOPTERS.md  ANNOUNCEMENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY-DEPENDENCY.md  SECURITY-INSIGHTS.yml  SECURITY-SELF-ASSESSMENT.md  SECURITY.md  SUPPORT.md  cliff.toml  mkdocs.yml  pyproject.toml
skeleton/__pypackages__/: README.md
skeleton/docs/: README.md  gen_ref_pages.py
skeleton/docs/guides/: README.md
skeleton/docs/tutorials/: README.md
skeleton/src/: README.md
skeleton/src/{{cookiecutter.repository}}/: __init__.py
skeleton/tests/: README.md
src/: README.md
src/testing/: __init__.py
template/: check_workflow_status.sh  create_cookiecutter_json.sh  create_repository.sh
template/settings_issue/{{cookiecutter.repository}}/: issue-body.md
template/test_library/src/{{cookiecutter.repository}}/: __init__.py  _bar.py  dummy.py
template/test_library/tests/: test_dummy.py
tests/: README.md
to_github/: PULL_REQUEST_TEMPLATE.md
to_github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-a.yml  show-and-tell.yml
to_github/ISSUE_TEMPLATE/: adopters.yml  bug_report.yml  config.yml  feature_request.yml
